--- a/ocp4/InstallOpenShiftAll.yml
+++ b/ocp4/InstallOpenShiftAll.yml
@@ -146,7 +146,7 @@
     - name: get b64 to var
       slurp:
         src: ~/openshift4/append-bootstrap.ign
-      register: b64.appendbootstrap
+      register: "{{ b64.appendbootstrap }}"
       
     - name: get b64 to var
       slurp:
