--- a/ocp4/InstallOpenShiftAll.yml
+++ b/ocp4/InstallOpenShiftAll.yml
@@ -28,12 +28,12 @@
       appendbootstrap: ""
       worker: ""
       master: ""
-    table_item_worker1: { vm_name: "testworker1", vm_ram: "{{ vm.worker_ram }}", vm_cpus: "{{ vm.worker_cpus }}", ignition_file: "{{ b64.worker }}", vm_mac: "" }
-    table_item_worker2: { vm_name: "testworker2", vm_ram: "{{ vm.worker_ram }}", vm_cpus: "{{ vm.worker_cpus }}", ignition_file: "{{ b64.worker }}", vm_mac: "" }
-    table_item_master1: { vm_name: "testmaster1", vm_ram: "{{ vm.master_ram }}", vm_cpus: "{{ vm.master_cpus }}", ignition_file: "{{ b64.master }}", vm_mac: "" }
-    table_item_master2: { vm_name: "testmaster2", vm_ram: "{{ vm.master_ram }}", vm_cpus: "{{ vm.master_cpus }}", ignition_file: "{{ b64.master }}", vm_mac: "" }
-    table_item_master3: { vm_name: "testmaster3", vm_ram: "{{ vm.master_ram }}", vm_cpus: "{{ vm.master_cpus }}", ignition_file: "{{ b64.master }}", vm_mac: "" }
-    table_item_bootstrap: { vm_name: "testbootstrap", vm_ram: "{{ vm.bootstrap_ram }}", vm_cpus: "{{ vm.bootstrap_cpus }}", ignition_file: "{{ b64.appendbootstrap }}", vm_mac: "" }
+    table_item_worker1: { vm_name: "testworker1", vm_ram: "{{ vm.worker_ram }}", vm_cpus: "{{ vm.worker_cpus }}", ignition_file: "{{ b64worker }}", vm_mac: "" }
+    table_item_worker2: { vm_name: "testworker2", vm_ram: "{{ vm.worker_ram }}", vm_cpus: "{{ vm.worker_cpus }}", ignition_file: "{{ b64worker }}", vm_mac: "" }
+    table_item_master1: { vm_name: "testmaster1", vm_ram: "{{ vm.master_ram }}", vm_cpus: "{{ vm.master_cpus }}", ignition_file: "{{ b64master }}", vm_mac: "" }
+    table_item_master2: { vm_name: "testmaster2", vm_ram: "{{ vm.master_ram }}", vm_cpus: "{{ vm.master_cpus }}", ignition_file: "{{ b64master }}", vm_mac: "" }
+    table_item_master3: { vm_name: "testmaster3", vm_ram: "{{ vm.master_ram }}", vm_cpus: "{{ vm.master_cpus }}", ignition_file: "{{ b64master }}", vm_mac: "" }
+    table_item_bootstrap: { vm_name: "testbootstrap", vm_ram: "{{ vm.bootstrap_ram }}", vm_cpus: "{{ vm.bootstrap_cpus }}", ignition_file: "{{ b64appendbootstrap }}", vm_mac: "" }
 
 # Install  
   tasks:
@@ -146,17 +146,17 @@
     - name: get b64 to var
       slurp:
         src: ~/openshift4/append-bootstrap.ign
-      register: appendbootstrap
+      register: b64appendbootstrap
       
     - name: get b64 to var
       slurp:
         src: ~/openshift4/worker.ign
-      register: b64.worker
+      register: b64worker
       
     - name: get b64 to var
       slurp:
         src: ~/openshift4/master.ign
-      register: b64.master
+      register: b64master
       
 #    - name: Copy b64 var to local file
 #      local_action: copy content="{{ b64.append-bootstrap }}" dest="./append-bootstrap.b64"
