--- a/ocp4/InstallOpenShiftAll.yml
+++ b/ocp4/InstallOpenShiftAll.yml
@@ -131,6 +131,11 @@
         src: ~/openshift4/append-bootstrap.ign
       register: b64appendbootstrap
       
+    - name: debug
+      debug:
+        msg: "{{ b64appendbootstrap['content'] | b64decode }}"
+
+      
     - name: get b64 to var
       slurp:
         src: ~/openshift4/worker.ign
