--- a/SendMail.yml
+++ b/SendMail.yml
@@ -4,7 +4,8 @@
       username: ""
       password: ""
       to: ""
-
+  
+  task:
   - name: Sending an e-mail using Gmail SMTP servers
     mail:
       host: smtp.gmail.com
