--- a/SendMail.yml
+++ b/SendMail.yml
@@ -5,7 +5,7 @@
     password: ""
     to: ""
   
-  task:
+  tasks:
     - name: Sending an e-mail using Gmail SMTP servers
       mail:
         host: smtp.gmail.com
