--- a/SendMail.yml
+++ b/SendMail.yml
@@ -8,10 +8,10 @@
   tasks:
     - name: Sending an e-mail using Gmail SMTP servers
       mail:
-        host: smtp.gmail.com
-        port: 465
-        username: "{{ username }}"
-        password: "{{ password }}"
+        host: aspmx.l.google.com
+        port: 25
+        #username: "{{ username }}"
+        #password: "{{ password }}"
         to: "{{ to }}" #Rémi Salandre <remi.salandre@gmail.com>
         subject: Test Ansible-report
         body: 'System {{ ansible_hostname }} has been successfully provisioned.'
