--- a/ocp4/InstallOpenShiftAll.yml
+++ b/ocp4/InstallOpenShiftAll.yml
@@ -314,13 +314,15 @@
         mode: '0755'
         remote_src: yes
     
-    - pause:
-        minutes: 2
+    #- pause:
+    #    minutes: 2
     
     - name: Add Storage to image registry
       command: oc patch configs.imageregistry.operator.openshift.io cluster --type merge --patch '{"spec":{"storage":{"emptyDir":{}}}}'
-      #environment:
-      #  KUBECONFIG: ~/openshift4/auth/kubeconfig
+      register: result
+      until: result.rc == 0
+      retries: 5
+      delay: 10
     
     - name: Wait for installation is complete
       command: openshift-install wait-for install-complete --dir ~/openshift4/
