--- a/ocp4/InstallOpenShiftAll.yml
+++ b/ocp4/InstallOpenShiftAll.yml
@@ -296,6 +296,10 @@
 
     - name: Wait for bootstrap is complete
       command: openshift-install wait-for bootstrap-complete --dir ~/openshift4/
+      register: result
+      until: result.rc == 0
+      retries: 2
+      delay: 10
     
     #- name: Add Storage to image registry
     #  command: export KUBECONFIG=~/openshift4/auth/kubeconfig
