--- a/ocp4/InstallOpenShiftAll.yml
+++ b/ocp4/InstallOpenShiftAll.yml
@@ -26,6 +26,8 @@
       ocpInstall: "http://mirror.openshift.com/pub/openshift-v4/clients/ocp/4.3.2/openshift-install-linux-4.3.2.tar.gz"
     table_item_worker1: { vm_name: "testworker1", vm_ram: "{{ vm.worker_ram }}", vm_cpus: "{{ vm.worker_cpus }}", ignition_file: "{{ b64worker['content'] }}", vm_mac: "" }
     table_item_worker2: { vm_name: "testworker2", vm_ram: "{{ vm.worker_ram }}", vm_cpus: "{{ vm.worker_cpus }}", ignition_file: "{{ b64worker['content'] }}", vm_mac: "" }
+    table_item_worker3: { vm_name: "testworker1", vm_ram: "{{ vm.worker_ram }}", vm_cpus: "{{ vm.worker_cpus }}", ignition_file: "{{ b64worker['content'] }}", vm_mac: "" }
+    table_item_worker4: { vm_name: "testworker2", vm_ram: "{{ vm.worker_ram }}", vm_cpus: "{{ vm.worker_cpus }}", ignition_file: "{{ b64worker['content'] }}", vm_mac: "" }
     table_item_master1: { vm_name: "testmaster1", vm_ram: "{{ vm.master_ram }}", vm_cpus: "{{ vm.master_cpus }}", ignition_file: "{{ b64master['content'] }}", vm_mac: "" }
     table_item_master2: { vm_name: "testmaster2", vm_ram: "{{ vm.master_ram }}", vm_cpus: "{{ vm.master_cpus }}", ignition_file: "{{ b64master['content'] }}", vm_mac: "" }
     table_item_master3: { vm_name: "testmaster3", vm_ram: "{{ vm.master_ram }}", vm_cpus: "{{ vm.master_cpus }}", ignition_file: "{{ b64master['content'] }}", vm_mac: "" }
@@ -215,6 +217,8 @@
       with_items:
           - "{{ table_item_worker1 }}"
           - "{{ table_item_worker2 }}"
+          - "{{ table_item_worker3 }}"
+          - "{{ table_item_worker4 }}"
           - "{{ table_item_master1 }}"
           - "{{ table_item_master2 }}"
           - "{{ table_item_master3 }}"
@@ -238,6 +242,8 @@
       with_items:
           - "{{ table_item_worker1 }}"
           - "{{ table_item_worker2 }}"
+          - "{{ table_item_worker3 }}"
+          - "{{ table_item_worker4 }}"
           - "{{ table_item_master1 }}"
           - "{{ table_item_master2 }}"
           - "{{ table_item_master3 }}"
@@ -257,6 +263,8 @@
           - "{{ table_item_bootstrap }}"
           - "{{ table_item_worker1 }}"
           - "{{ table_item_worker2 }}"
+          - "{{ table_item_worker3 }}"
+          - "{{ table_item_worker4 }}"
           - "{{ table_item_master1 }}"
           - "{{ table_item_master2 }}"
           - "{{ table_item_master3 }}"
