--- a/DeployTemplateComplete.yml
+++ b/DeployTemplateComplete.yml
@@ -38,11 +38,11 @@
           num_cpus: "{{ vm_cpus }}" #For example to create a VM with 2 sockets of 4 cores, specify num_cpus: 8 and num_cpu_cores_per_socket: 4
           scsi: paravirtual
           boot_firmware: "efi"
-        networks:
-        - name: VM Network
-          type: dhcp
-          start_connected: yes
-          mac: "{{ vm_mac }}"
+#        networks:
+#        - name: VM Network
+#          type: dhcp
+#          start_connected: yes
+#          mac: "{{ vm_mac }}"
         customization:
           hostname: "{{ vm_hostname }}"
         wait_for_ip_address: yes
