--- a/DeployTemplateComplete.yml
+++ b/DeployTemplateComplete.yml
@@ -41,8 +41,8 @@
         networks:
         - name: "VM Network"
           type: dhcp
-          start_connected: yes
-          mac: "{{ vm_mac }}"
+#          start_connected: yes
+#          mac: "{{ vm_mac }}"
         customization:
           hostname: "{{ vm_hostname }}"
         wait_for_ip_address: yes
