--- a/DeployTemplateComplete.yml
+++ b/DeployTemplateComplete.yml
@@ -3,47 +3,72 @@
 - hosts: all
   #Variables for vCenter and VMs
   vars:
-    vcenter_ip: ""
-    vcenter_username: ""
-    vcenter_password: ""
-    vm_name: ""
-    dc: ""
-    folder: ""
-    template: ""
-    vm_ram: ""
-    vm_cpus: ""
-    vm_cpu_cores_per_socket: ""
-    vm_disk_gb: ""
-    vm_hostname: ""
-    vm_mac: ""
+    vcenter:
+      ip: ""
+      datastore: ""
+      username: ""
+      password: ""
+      datacenter: ""
+      folder: ""
+      template: ""
+    vm:
+	  name: ""
+      ram: ""
+      cpus: ""
+      disk_gb: ""
+	  hostname: ""
     
   tasks:
-    - name: Create a virtual machine from a template
+    - name: Create a virtual machine from a vcenter.template
       vmware_guest:
-        hostname: "{{ vcenter_ip }}"
-        username: "{{ vcenter_username }}"
-        password: "{{ vcenter_password }}"
+        hostname: "{{ vcenter.ip }}"
+        username: "{{ vcenter.username }}"
+        password: "{{ vcenter.password }}"
         validate_certs: no
-        datacenter: "{{ dc }}"
-        folder: "{{ folder }}" 
-        name: "{{ vm_name }}"
-        state: poweredon
-        template: "{{ template }}"
+        datacenter: "{{ vcenter.datacenter }}"
+        folder: "{{ vcenter.folder }}" 
+        name: "{{ vm.name }}"
+        state: present
+        template: "{{ vcenter.template }}"
         disk:
-        - size_gb: "{{ vm_disk_gb }}"
+        - size_gb: "{{ vm.disk_gb }}"
           type: thin
-          datastore: vsanDatastore
+          datastore: "{{ vcenter.datastore }}"
         hardware:
-          memory_mb: "{{ vm_ram }}"
-          num_cpus: "{{ vm_cpus }}" #For example to create a VM with 2 sockets of 4 cores, specify num_cpus: 8 and num_cpu_cores_per_socket: 4
+          memory_mb: "{{ vm.ram }}"
+          num_cpus: "{{ vm.cpus }}" 
           scsi: paravirtual
           boot_firmware: "efi"
         networks:
         - name: "VM Network"
           type: dhcp
-          start_connected: yes
-#          mac: "{{ vm_mac }}"
-        customization:
-          hostname: "{{ vm_hostname }}"
+		customization:
+          hostname: "{{ vm.hostname }}"
+      delegate_to: localhost
+      
+    - name: change mac address
+      vmware_guest_network:
+        hostname: "{{ vcenter.ip }}"
+        username: "{{ vcenter.username }}"
+        password: "{{ vcenter.password }}"
+        validate_certs: no
+        datacenter: "{{ vcenter.datacenter }}"
+        folder: "{{ vcenter.folder }}" 
+        name: "{{ vm_name }}"
+        gather_network_info: false
+        networks:
+          - label: "Network adapter 1"
+            state: present
+            manual_mac: "{{ vm.mac }}"
+      delegate_to: localhost
+    
+    - name: Start VMs
+      vmware_guest:
+        hostname: "{{ vcenter.ip }}"
+        username: "{{ vcenter.username }}"
+        password: "{{ vcenter.password }}"
+        validate_certs: no
+        name: "{{ vm.name }}"
+        state: poweredon
         wait_for_ip_address: yes
       delegate_to: localhost
