--- a/DeployTemplateComplete.yml
+++ b/DeployTemplateComplete.yml
@@ -82,11 +82,11 @@
         username: "{{ vcenter.username }}"
         password: "{{ vcenter.password }}"
         validate_certs: no
-        datacenter: "{{ datacenter }}"
+        datacenter: "{{ vcenter.datacenter }}"
         folder: "/{{ vcenter.datacenter }}/vm"
         vm_id: "{{ vm.name }}"
-        vm_username: {{ vm_username }}
-        vm_password: {{ vm_password }}
+        vm_username: "{{ vm_username }}"
+        vm_password: "{{ vm_password }}"
         vm_shell: "/usr/bin/hostnamectl"
         vm_shell_args: "set-hostname {{ vm.hostname }}"
       delegate_to: localhost
